tests-build/tests/fail/net_without_tcp_missing_tcp.rs
use tests_build::tokio_net::tcp;

fn main() {}

